--- a/project.html
+++ b/project.html
@@ -10,6 +10,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="styles/main.css">
+  <!--For Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body>
@@ -24,9 +26,29 @@
       <li><a href="project.html" class="active">Project</a></li>
     </ul>
   </nav>
-  <main id="home">
-
-  </main>
+  <div class="wrapper">
+    <header> Quote of the Day</header>
+    <div class="content">
+      <div class="quote-area">
+        <i class="fas fa-quote-left"></i>
+        <p class="quote">Never gonna give up</p>
+        <i class="fas fa-quote-right"></i>
+      </div>
+      <div class="author"></div>
+      <span>__</span>
+      <span calss name>Rick Roll</span>
+    </div>
+    <div class="buttons">
+      <div class="features">
+        <ul>
+          <li class="sound"><i class="fas fa-volume-up"></i></li>
+          <li class="copy"><i class="fas fa-copy"></i></li>
+          <li class="twitter"><i class="fas fa-twitter"></i></li>
+        </ul>
+        <button>New Quote</button>
+      </div>
+    </div>
+  </div>
 
   <footer>
     &copy;<span id="year"></span> | Week 04 - Biography | CSE 121b
