--- a/project.html
+++ b/project.html
@@ -9,12 +9,12 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;600&display=swap"
     rel="stylesheet">
-  <link rel="stylesheet" href="styles/main.css">
+  <link rel="stylesheet" href="styles/project.css">
   <!--For Icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
-<body>
+<body class="wholeBody">
   <nav>
     <ul id="menu">
       <li><a id="toggleMenu">&equiv;</a></li>
@@ -26,24 +26,25 @@
       <li><a href="project.html" class="active">Project</a></li>
     </ul>
   </nav>
+  
   <div class="wrapper">
     <header> Quote of the Day</header>
     <div class="content">
       <div class="quote-area">
         <i class="fas fa-quote-left"></i>
-        <p class="quote">Never gonna give up</p>
+        <p class="quote">Never gonna give you up</p>
         <i class="fas fa-quote-right"></i>
       </div>
-      <div class="author"></div>
-      <span>__</span>
-      <span calss name>Rick Roll</span>
+      <div class="author">
+        <span>-</span>
+        <span class="name">Rick Roll</span>
+      </div>
     </div>
     <div class="buttons">
       <div class="features">
         <ul>
           <li class="sound"><i class="fas fa-volume-up"></i></li>
           <li class="copy"><i class="fas fa-copy"></i></li>
-          <li class="twitter"><i class="fas fa-twitter"></i></li>
         </ul>
         <button>New Quote</button>
       </div>
