--- a/project/project.html
+++ b/project/project.html
@@ -54,11 +54,11 @@
   <footer>
     &copy;<span id="year"></span> | Week 04 - Biography | CSE 121b
   </footer>
-  <script src="scripts/main.js"></script>
+  <script src="../scripts/main.js"></script>
   <script>
     document.getElementById("year").innerHTML = new Date().getFullYear();
   </script>
-  <script src="scripts/project.js"></script>
+  <script src="../scripts/project.js"></script>
 </body>
 
 </html>
